--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>ToDo List App</title>
+  <title>Circle Game</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="animate.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -14,17 +14,7 @@
 <body>
 
     <div class="container">
-      <h1>TO-DO LIST<span class="plus">+</span></h1>
-      <input type="text" name="" id="" value="Add New ToDo">
-      <ul>
-        <li class="list-item"><img src="https://cdn3.iconfinder.com/data/icons/computer-network-icons/512/Trash_Bin-512.png" alt="">List Item</li>
-        <li class="list-item"><img src="https://cdn3.iconfinder.com/data/icons/computer-network-icons/512/Trash_Bin-512.png" alt="">List Item</li>
-        <li class="list-item"><img src="https://cdn3.iconfinder.com/data/icons/computer-network-icons/512/Trash_Bin-512.png" alt="">List Item</li>
-        <li class="list-item"><img src="https://cdn3.iconfinder.com/data/icons/computer-network-icons/512/Trash_Bin-512.png" alt="">List Item</li>
-        <li class="list-item"><img src="https://cdn3.iconfinder.com/data/icons/computer-network-icons/512/Trash_Bin-512.png" alt="">List Item</li>
-        <li class="list-item"><img src="https://cdn3.iconfinder.com/data/icons/computer-network-icons/512/Trash_Bin-512.png" alt="">List Item</li>
-        <li class="list-item"><img src="https://cdn3.iconfinder.com/data/icons/computer-network-icons/512/Trash_Bin-512.png" alt="">List Item</li>
-      </ul>
+      
     </div>
 
   <script src="scripts.js"></script>
